another try to fix spacings at 2k monitors

--- a/skins/ubng/css/layout.css
+++ b/skins/ubng/css/layout.css
@@ -1,10 +1,22 @@
 /* Essentials */
 
-html, div, map, dt, isindex, form, header, aside, section, section, article, footer {  
-    display: block;  
-} 
+html,
+div,
+map,
+dt,
+isindex,
+form,
+header,
+aside,
+section,
+section,
+article,
+footer {
+    display: block;
+}
 
-html, body {
+html,
+body {
     height: 100%;
     margin: 0;
     padding: 0;
@@ -21,7 +33,8 @@ html, body {
     height: 20px;
 }
 
-a:link, a:visited {
+a:link,
+a:visited {
     color: #e95802;
     text-decoration: none;
 }
@@ -47,7 +60,8 @@ header .toggleLinkWMAN {
 }
 
 
-header#header h1.site_title, header#header h2.section_title {
+header#header h1.site_title,
+header#header h2.section_title {
     float: left;
     margin: 0;
     font-size: 22px;
@@ -60,6 +74,7 @@ header#header h1.site_title, header#header h2.section_title {
     line-height: 55px;
     color: #fff;
     text-shadow: 0 -1px 0 #000;
+    max-width: 442px;
 }
 
 header#header h1.site_title sup {
@@ -94,7 +109,8 @@ header#header h2.section_title {
     line-height: 29px;
     color: #fff;
     text-decoration: none;
-    text-shadow: 0 -1px 0 #000;}
+    text-shadow: 0 -1px 0 #000;
+}
 
 .btn_view_help a:hover {
     background-position: 0 -27px;
@@ -112,6 +128,7 @@ section#secondary_bar .user {
     float: left;
     width: 23%;
     height: 38px;
+    max-width: 442px;
 }
 
 .user p {
@@ -132,7 +149,8 @@ section#secondary_bar .user {
 
 .user a {
     text-decoration: none;
-    color: #666666}
+    color: #666666
+}
 
 .user a:hover {
     color: #77BACE;
@@ -177,6 +195,7 @@ article.breadcrumbs {
     box-shadow: 0 1px 0 #fff;
     height: 23px;
     margin: 4px 3%;
+    margin-left: 32px;
     overflow: hidden;
 }
 
@@ -187,14 +206,16 @@ article.breadcrumbs {
     line-height: 23px;
 }
 
-.breadcrumbs a.current, .breadcrumbs a.current:hover {
+.breadcrumbs a.current,
+.breadcrumbs a.current:hover {
     color: #9E9E9E;
     font-weight: bold;
     text-shadow: 0 1px 0 #fff;
     text-decoration: none;
 }
 
-.breadcrumbs a:link, .breadcrumbs a:visited {
+.breadcrumbs a:link,
+.breadcrumbs a:visited {
     color: #44474F;
     text-decoration: none;
     text-shadow: 0 1px 0 #fff;
@@ -206,9 +227,7 @@ article.breadcrumbs {
 
 }
 
-.breadcrumbs a:active {
-
-}
+.breadcrumbs a:active {}
 
 .breadcrumb_divider {
     display: inline-block;
@@ -227,6 +246,7 @@ aside#sidebar {
     float: left;
     min-height: 500px;
     margin-top: -4px;
+    max-width: 442px;
 }
 
 #sidebar hr {
@@ -235,7 +255,8 @@ aside#sidebar {
     background: url(../images/sidebar_divider.png) repeat-x;
     display: block;
     width: 100%;
-    height: 2px;}
+    height: 2px;
+}
 
 
 /* Search */
@@ -308,12 +329,14 @@ aside#sidebar {
 
 #sidebar ul {
     clear: both;
-    margin: 0; padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 #sidebar li {
     list-style: none;
-    margin: 0 0 0 12%; padding: 0;
+    margin: 0 0 0 12%;
+    padding: 0;
 }
 
 #sidebar li a {
@@ -337,7 +360,8 @@ aside#sidebar {
     color: #666666;
     padding-left: 6%;
     text-shadow: 0 1px 0 #fff;
-    margin: 10px 0 0 0;}
+    margin: 10px 0 0 0;
+}
 
 #sidebar a {
     color: #666666;
@@ -376,8 +400,13 @@ section#main {
 .module {
     border: 1px solid #9BA0AF;
     width: 100%;
+    /** deprecated
     margin: 20px 3% 0 3%;
+    */
     margin-top: 20px;
+    margin-right: 3%;
+    margin-bottom: 0;
+    margin-left: 32px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
@@ -391,12 +420,15 @@ section#main {
 }
 
 .module header {
-    min-height: 38px;     
+    min-height: 38px;
     width: 100%;
-    background: #F1F1F4 url(../images/secondary_bar.png) repeat-x;  
-    -webkit-border-top-left-radius: 5px; -webkit-border-top-right-radius: 5px;
-    -moz-border-radius-topleft: 5px; -moz-border-radius-topright: 5px;
-    border-top-left-radius: 5px; border-top-right-radius: 5px;
+    background: #F1F1F4 url(../images/secondary_bar.png) repeat-x;
+    -webkit-border-top-left-radius: 5px;
+    -webkit-border-top-right-radius: 5px;
+    -moz-border-radius-topleft: 5px;
+    -moz-border-radius-topright: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 .module footer {
@@ -404,14 +436,18 @@ section#main {
     width: 100%;
     border-top: 1px solid #9CA1B0;
     background: #F1F1F4 url(../images/module_footer_bg.png) repeat-x;
-    -webkit-border-bottom-left-radius: 5px; -webkit-border-bottom-right-radius: 5px;
-    -moz-border-radius-bottomleft: 5px; -moz-border-radius-bottomright: 5px;
-    -webkit-border-bottom-left-radius: 5px; -webkit-border-bottom-right-radius: 5px;
+    -webkit-border-bottom-left-radius: 5px;
+    -webkit-border-bottom-right-radius: 5px;
+    -moz-border-radius-bottomleft: 5px;
+    -moz-border-radius-bottomright: 5px;
+    -webkit-border-bottom-left-radius: 5px;
+    -webkit-border-bottom-right-radius: 5px;
 }
 
 .module_content {
     margin: 5px 5px;
-    color: #666;}
+    color: #666;
+}
 
 /* Module Widths */
 
@@ -454,12 +490,15 @@ section#main {
     border-radius: 5px;
 }
 
-.overview_today, .overview_previous {
+.overview_today,
+.overview_previous {
     width: 50%;
-    float: left;}
+    float: left;
+}
 
 .stats_overview p {
-    margin: 0; padding: 0;
+    margin: 0;
+    padding: 0;
     text-align: center;
     text-shadow: 0 1px 0 #fff;
 }
@@ -473,12 +512,14 @@ section#main {
 .stats_overview p.overview_count {
     font-size: 26px;
     font-weight: bold;
-    color: #333333;}
+    color: #333333;
+}
 
 .stats_overview p.overview_type {
     font-size: 10px;
     color: #999999;
-    margin-bottom: 8px}
+    margin-bottom: 8px
+}
 
 /* Content Manager */
 
